<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parking_nearby_parkng_title"
            android:id="@+id/textView"
            android:layout_gravity="center"
            style="@style/Theme.PlaceDetails.title"
            android:layout_marginTop="50dp"/>

    <RelativeLayout
            android:id="@+id/parkingLoadingProgressBarPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_gravity="center"
                android:layout_toLeftOf="@+id/textView1"
                android:layout_alignParentTop="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parking_loading_data_text"
                android:id="@+id/textView1"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
    </RelativeLayout>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/parking_no_parking_found_in_area_message"
            android:id="@+id/noParkingDataAvailableLabel"
            android:gravity="center_horizontal"
            android:visibility="gone"/>

    <LinearLayout
            android:id="@+id/parkingPlaceFragment"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    </LinearLayout>
</LinearLayout>